<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_marginTop="8dp"
        android:id="@+id/share_rate_id"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <Button
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:id="@+id/share_id"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@drawable/share_icon"
            />
        <Button
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/share_id"
            android:id="@+id/rate_id"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@drawable/rate_icon"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/share_rate_id"
        android:id="@+id/logo_contain_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="360dp"
            android:layout_height="260dp"
            android:contentDescription="@string/todo_txt"
            android:scaleType="centerCrop"
            android:src="@drawable/qr_bar_coder_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_contain_id"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/scan_txt"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_gen"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_below="@+id/btn_scan"
            android:layout_marginTop="10dp"
            android:text="@string/generate_qr"
            android:textSize="23sp" />


    </RelativeLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/powered_by_banglabs_txt"
        android:textColor="@color/purple_700"
        android:textSize="20sp" />


   <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/demo_add" />


</RelativeLayout>